apps/homebridge/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
  labels:
    app: homebridge
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8581
      targetPort: 8581
      protocol: TCP
  selector:
    app: homebridge
